welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: ';' expected but integer literal found.
    if (nums(i-2))==1 && nums(i-1)==2 && nums(i)==3) {
                    ^